--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 	<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
 	<!--script src="js/less-1.3.3.min.js"></script-->
 	<!--append ‘#!watch’ to the browser URL, then refresh the page. -->
-	
+
 	<link href="file:///C:/Users/ksaste/Downloads/css/bootstrap.min.css" rel="stylesheet">
 	<link href="file:///C:/Users/ksaste/Downloads/css/style.css" rel="stylesheet">
 
@@ -26,7 +26,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="file:///C:/Users/ksaste/Downloads/img/apple-touch-icon-72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="file:///C:/Users/ksaste/Downloads/img/apple-touch-icon-57-precomposed.png">
   <link rel="shortcut icon" href="file:///C:/Users/ksaste/Downloads/img/favicon.png">
-  
+
 	<script type="text/javascript" src="file:///C:/Users/ksaste/Downloads/js/jquery.min.js"></script>
 	<script type="text/javascript" src="file:///C:/Users/ksaste/Downloads/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="file:///C:/Users/ksaste/Downloads/js/scripts.js"></script>
@@ -38,22 +38,22 @@
 <div class="container" style="
     height: 300px;
 ">
-	<div class="row clearfix">
+	<div id ="container" class="row clearfix">
 		<div class="col-md-12 column">
 			<h3 class="text-center">
 				Squad Spotters
 			</h3>
-			<form class="form-horizontal" role="form">
+			<form class="form-horizontal" role="form" method="get" action="{{ url_for('instagram_authentication')}}">
 				<div class="form-group">
-					 <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+					 <label for="emailValue" class="col-sm-2 control-label">Email</label>
 					<div class="col-sm-10">
-						<input type="email" class="form-control" id="inputEmail3">
+						<input type="text" name="emailValue" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
-					 <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+					 <label for="passwordValue" class="col-sm-2 control-label">Password</label>
 					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3">
+						<input type="password" name="passwordValue" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
