--- a/templates/album.html
+++ b/templates/album.html
@@ -8,10 +8,10 @@
       <form method = "post" action="{{ url_for('upload')}}" enctype="multipart/form-data">
         <div class="file-field input-field">
           <input class="file-path validate" type="text"/>
-            <div class="btn">
-              <span>File</span>
+            <div class="btn-lg">
+              <span>Upload</span>
               <input type="file" name="fileInput"/>
-              <input type = "submit"/>
+        
             </div>
         </div>
       </form>
